include/dss_capi.h

    DSS_CAPI_DLL void DSSProgress_Close(void);
    DSS_CAPI_DLL void DSSProgress_Set_Caption(char* Value);
    DSS_CAPI_DLL void DSSProgress_Set_PctProgress(int32_t Value);
    DSS_CAPI_DLL void DSSProgress_Show(void);